force-app/packaged/main/default/objects/Subscriber_Authentication__c/Subscriber_Authentication__c.object-meta.xml
<CustomObject>
    <label>Subscriber Authentication</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribers Authentication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>