force-app/packaged/main/default/objects/Subscriber_Authentication__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>