force-app/packaged/main/default/objects/Subscriber_Authentication__c/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSandbox</label>
    <type>Checkbox</type>
</CustomField>