force-app/packaged/main/default/objects/Subscriber_Authentication__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <label>Org Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>