force-app/packaged/main/default/objects/Subscriber_Authentication__c/fields/Refresh__c.field-meta.xml
<CustomField>
    <fullName>Refresh__c</fullName>
    <label>Refresh</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>