force-app/packaged/main/default/objects/Subscriber_Authentication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Id__c</columns>
    <columns>Instance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>